# boids-threejs

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json  webpack.config.js
project/: package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  tsconfig.json  vercel.json  webpack.config.js
project/app/: admin.py  urls.py
project/app/models/: simulation.py
project/app/src/: alpine.ts  boid.ts  camera-controller.ts  camera.ts  domain.ts  index.ts  input-manager.ts  input-mapping.ts  scene-manager.ts  scenemanager.ts  simulation.ts  styles.css  three-setup.ts  utils.ts
project/app/templates/: index.html
project/app/views/: DomainView.py  Index.py  base_view.py  behavior.py  boids.py  boids_view.py  configuration.py  configuration_view.py  domain.py  domain_view.py  properties.py  simulation.py  simulation_section_view.py  simulation_view.py  simulations.py  simulations_list.py  simulations_list_view.py
project/project/: settings.py  urls.py
project/src/: base.ts  boid.ts  camera-controller.ts  default-materials.ts  domain.ts  index.ts  input-mapping.ts  interface-helper.ts  physic.ts  program-manager.ts  program.ts  scene-manager.ts  styles.css
project/src/builders/: entity-builder.ts
project/src/components/: box-collider.ts  collider-component.ts  component.ts  renderer-component.ts
project/src/controllers/: camera-controller.ts  domain-controller.ts  simulation-controller.ts  spatial-partioning.ts  (+3 more)
project/static/: bundle.js
project/templates/: index.html
(+108 files in other folders)
