[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Vinicius <viniciusgoncalves2000@hotmail.com>"]
readme = "README.md"
packages = [{include = "project"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.4"
whitenoise = "^6.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
